Update Mustache templates for Moodle 5.0

--- a/styles.css
+++ b/styles.css
@@ -44,26 +44,26 @@ body.format-multitopic.dragging.dir-ltr .course-content ul.nav-tabs li.drop-afte
 }
 
 /* Section */
-body.format-multitopic ul.sections li.section .sectionname .inplaceeditable {
+body.format-multitopic ul.section-list li.section .sectionname .inplaceeditable {
     display: inline;
 }
-body.format-multitopic ul.sections li.section .course-section-header .section_subtitle {
+body.format-multitopic ul.section-list li.section .course-section-header .section_subtitle {
     font-size: small;
 }
-body.format-multitopic ul.sections li.section .summarytext .section_image_holder {
+body.format-multitopic ul.section-list li.section .summarytext .section_image_holder {
     float: right;
     width: 240px;
     text-align: right;
     font-size: xx-small;
 }
-body.format-multitopic ul.sections li.section .summarytext .section_image_holder img {
+body.format-multitopic ul.section-list li.section .summarytext .section_image_holder img {
     width: 240px;
     height: 180px;
     object-fit: cover;
 }
 
 /* Section Anchor Jump Fix */
-body.format-multitopic ul.sections li.section .course-section-header .sectionname {
+body.format-multitopic ul.section-list li.section .course-section-header .sectionname {
     scroll-margin-top: 70px;
 }
 
