--- a/templates/courseformat/content/section/header.mustache
+++ b/templates/courseformat/content/section/header.mustache
@@ -15,7 +15,7 @@
     along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
 }}
 {{!
-    @template core_courseformat/local/content/section/header
+    @template format_multitopic/courseformat/content/section/header
 
     Displays a course section header.
 
@@ -25,49 +25,57 @@
         "name": "Section title",
         "title": "<a href=\"http://moodle/course/view.php?id=5#section-0\">Section title</a>",
         "url": "#",
-        "editing": 0
+
+        "sectionbulk": true,
+        "editing": 0,
+        "headinglevel": 3
     }
 }}
+{{#sectionbulk}}
+{{$ core_courseformat/local/content/section/bulkselect }}
+    {{> core_courseformat/local/content/section/bulkselect }}
+{{/ core_courseformat/local/content/section/bulkselect }}
+{{/sectionbulk}}
 
-    {{#sectionbulk}}
-        {{$ core_courseformat/local/content/section/bulkselect }}
-            {{> core_courseformat/local/content/section/bulkselect }}
-        {{/ core_courseformat/local/content/section/bulkselect }}
-    {{/sectionbulk}}
     {{#sitehome}}
-        <h2 id="sectionid-{{id}}-title" class="sectionname">
+        <h2 id="sectionid-{{id}}-title" class="h3 sectionname">
             {{{title}}}
         </h2>
     {{/sitehome}}
     {{^sitehome}}
-        <div class="d-flex align-items-start position-relative">
-            {{#iscollapsible}}
-            <a role="button" data-toggle="collapse" data-bs-toggle="collapse"
-               href="#coursecontentcollapseid{{id}}"
-               id="collapsesectionid{{id}}"
-               aria-expanded="{{^contentcollapsed}}true{{/contentcollapsed}}{{#contentcollapsed}}false{{/contentcollapsed}}"
-               aria-controls="coursecontentcollapseid{{id}}"
-               class="btn btn-icon mr-1 icons-collapse-expand justify-content-center
-                    {{^editing}} stretched-link {{/editing}}
-                    {{#contentcollapsed}} collapsed {{/contentcollapsed}}"
-               aria-label="{{name}}">
-            <span class="expanded-icon icon-no-margin p-2" title="{{#str}} collapse, core {{/str}}">
-                {{#pix}} t/expandedchevron, core {{/pix}}
-            </span>
-            <span class="collapsed-icon icon-no-margin p-2" title="{{#str}} expand, core {{/str}}">
-                <span class="dir-rtl-hide">{{#pix}} t/collapsedchevron, core {{/pix}}</span>
-                <span class="dir-ltr-hide">{{#pix}} t/collapsedchevron_rtl, core {{/pix}}</span>
-            </span>
-            </a>
-            {{/iscollapsible}}
-            {{^iscollapsible}}
-            <span class="icon mr-1 icon-no-margin p-2">
-                <i class="{{fmticon}}"></i>
-            </span>
-            {{/iscollapsible}}
-            <h3 class="sectionname course-content-item d-flex align-self-stretch align-items-center mb-0"
-                id="sectionid-{{id}}-title" data-for="section_title" data-id="{{id}}" data-number="{{num}}">
-                {{{title}}}
-            </h3>
-        </div>
+
+            <div class="d-flex align-items-center position-relative">
+                {{#iscollapsible}}
+                <a role="button"
+                    data-bs-toggle="collapse"
+                    data-for="sectiontoggler"
+                    href="#coursecontentcollapseid{{id}}"
+                    id="collapsesectionid{{id}}"
+                    aria-expanded="{{^contentcollapsed}}true{{/contentcollapsed}}{{#contentcollapsed}}false{{/contentcollapsed}}"
+                    aria-controls="coursecontentcollapseid{{id}}"
+                    class="btn btn-icon me-3 icons-collapse-expand
+                        {{#contentcollapsed}} collapsed {{/contentcollapsed}}"
+                    aria-label="{{name}}">
+                <span class="expanded-icon icon-no-margin p-2" title="{{#str}} collapse, core {{/str}}">
+                    {{#pix}} t/expandedchevron, core {{/pix}}
+                    <span class="visually-hidden">{{#str}} collapse, core {{/str}}</span>
+                </span>
+                <span class="collapsed-icon icon-no-margin p-2" title="{{#str}} expand, core {{/str}}">
+                    <span class="dir-rtl-hide">{{#pix}} t/collapsedchevron, core {{/pix}}</span>
+                    <span class="dir-ltr-hide">{{#pix}} t/collapsedchevron_rtl, core {{/pix}}</span>
+                    <span class="visually-hidden">{{#str}} expand, core {{/str}}</span>
+                </span>
+                </a>
+                {{/iscollapsible}}
+                {{^iscollapsible}}
+                <span class="icon me-3 icon-no-margin p-2">
+                    <i class="{{fmticon}}"></i>
+                </span>
+                {{/iscollapsible}}
+                <h{{headinglevel}} class="h4 sectionname course-content-item d-flex align-self-stretch align-items-center mb-0"
+                    id="sectionid-{{id}}-title" data-for="section_title" data-id="{{id}}" data-number="{{num}}">
+                    {{{title}}}
+                </h{{headinglevel}}>
+            </div>
+
     {{/sitehome}}
