--- a/templates/courseformat/courseindex/courseindex.mustache
+++ b/templates/courseformat/courseindex/courseindex.mustache
@@ -107,13 +107,13 @@
 
 }}
 
-<div id="{{uniqid}}-course-index" class="courseindex {{#editmode}} editing {{/editmode}}" role="tree">
+<div id="course-index" class="courseindex {{#editmode}} editing {{/editmode}}" role="tree">
     {{#sectionsnested}}
     {{> format_multitopic/courseformat/courseindex/section }}
     {{/sectionsnested}}
 </div>
 {{#js}}
 require(['format_multitopic/courseformat/courseindex/courseindex'], function(component) {
-    component.init('{{uniqid}}-course-index');
+    component.init('course-index');
 });
 {{/js}}
