--- a/templates/courseformat/courseindex/placeholders.mustache
+++ b/templates/courseformat/courseindex/placeholders.mustache
@@ -15,36 +15,36 @@
     along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
 }}
 {{!
-    @template core_courseformat/local/courseindex/placeholders
+    @template format_multitopic/courseformat/courseindex/placeholders
 
     This template renders the loading placeholders for the course index.
 
     Example context (json):
     {}
 }}
-<div data-region="loading-placeholder-content" aria-hidden="true" id="{{uniqid}}-course-index-placeholder">
-    <ul class="media-list">
-        <li class="media">
-            <div class="media-body col-md-6 p-0 d-flex align-items-center">
-                <div class="bg-pulse-grey rounded-circle mr-2"></div>
+<div data-region="loading-placeholder-content" aria-hidden="true" id="course-index-placeholder">
+    <ul class="placeholders list-unstyled px-5">
+        <li>
+            <div class="col-md-6 p-0 d-flex align-items-center">
+                <div class="bg-pulse-grey rounded-circle me-2"></div>
                 <div class="bg-pulse-grey w-100"></div>
             </div>
         </li>
-        <li class="media">
-            <div class="media-body col-md-6 p-0 d-flex align-items-center">
-                <div class="bg-pulse-grey rounded-circle mr-2"></div>
+        <li>
+            <div class="col-md-6 p-0 d-flex align-items-center">
+                <div class="bg-pulse-grey rounded-circle me-2"></div>
                 <div class="bg-pulse-grey w-100"></div>
             </div>
         </li>
-        <li class="media">
-            <div class="media-body col-md-6 p-0 d-flex align-items-center">
-                <div class="bg-pulse-grey rounded-circle mr-2"></div>
+        <li>
+            <div class="col-md-6 p-0 d-flex align-items-center">
+                <div class="bg-pulse-grey rounded-circle me-2"></div>
                 <div class="bg-pulse-grey w-100"></div>
             </div>
         </li>
-        <li class="media">
-            <div class="media-body col-md-6 p-0 d-flex align-items-center">
-                <div class="bg-pulse-grey rounded-circle mr-2"></div>
+        <li>
+            <div class="col-md-6 p-0 d-flex align-items-center">
+                <div class="bg-pulse-grey rounded-circle me-2"></div>
                 <div class="bg-pulse-grey w-100"></div>
             </div>
         </li>
@@ -52,6 +52,6 @@
 </div>
 {{#js}}
 require(['format_multitopic/courseformat/courseindex/placeholder'], function(component) {
-    component.init('{{uniqid}}-course-index-placeholder');
+    component.init('course-index-placeholder');
 });
 {{/js}}
