--- a/templates/courseformat/courseindex/section.mustache
+++ b/templates/courseformat/courseindex/section.mustache
@@ -27,6 +27,7 @@
         "number": 1,
         "sectionurl": "#",
         "indexcollapsed": 0,
+
         "current": 1,
         "visible": 1,
         "hasrestrictions": 0,
@@ -62,7 +63,7 @@
 {{#testingsection}}<div role="tree">{{/testingsection}}
 <div
     class="courseindex-section {{#current}}current{{/current}}"
-    id="{{uniqid}}-course-index-section-{{id}}"
+    id="course-index-section-{{id}}"
     data-for="section"
     data-id="{{id}}"
     data-number="{{number}}"
@@ -79,23 +80,23 @@
         data-for="section_item"
         style="padding-left: {{indent}}em;"
     >
-        <a data-toggle="collapse" data-bs-toggle="collapse"
+        <a data-bs-toggle="collapse"
             href="#courseindexcollapse{{number}}"
             class="courseindex-chevron icons-collapse-expand {{#indexcollapsed}}collapsed{{/indexcollapsed}}"
             aria-expanded="{{^indexcollapsed}}true{{/indexcollapsed}}{{#indexcollapsed}}false{{/indexcollapsed}}"
             aria-controls="courseindexcollapse{{number}}"
             tabindex="-1"
         >
-            <span class="collapsed-icon icon-no-margin mr-1"
+            <span class="collapsed-icon icon-no-margin me-1"
                 title="{{#str}} expand, core {{/str}}">
                 <span class="dir-rtl-hide">{{#pix}} t/collapsedchevron, core {{/pix}}</span>
                 <span class="dir-ltr-hide">{{#pix}} t/collapsedchevron_rtl, core {{/pix}}</span>
-                <span class="sr-only">{{#str}} expand, core {{/str}}</span>
+                <span class="visually-hidden">{{#str}} expand, core {{/str}}</span>
             </span>
-            <span class="expanded-icon icon-no-margin mr-1"
+            <span class="expanded-icon icon-no-margin me-1"
                 title="{{#str}} collapse, core {{/str}}">
                 {{#pix}} t/expandedchevron, core {{/pix}}
-                <span class="sr-only">{{#str}} collapse, core {{/str}}</span>
+                <span class="visually-hidden">{{#str}} collapse, core {{/str}}</span>
             </span>
         </a>
         <a href="{{{sectionurl}}}"
@@ -106,13 +107,12 @@
         >
             {{{title}}}
         </a>
-        <span class="current-badge badge badge-primary ml-2 px-2 rounded-pill">
+        <span class="current-badge badge bg-primary text-white ms-2 px-2 rounded-pill">
             {{highlighted}}
         </span>
-        <span class="courseindex-locked ml-1" data-for="cm_name">
+        <span class="courseindex-locked ms-1" data-for="cm_name">
             {{#pix}} t/locked, core {{/pix}}
         </span>
-        <span class="dragicon ml-auto">{{#pix}}i/dragdrop{{/pix}}</span>
     </div>
     <div id="courseindexcollapse{{number}}"
         class="courseindex-item-content collapse {{^indexcollapsed}}show{{/indexcollapsed}}"
@@ -133,6 +133,6 @@
 {{#testingsection}}</div>{{/testingsection}}
 {{#js}}
 require(['format_multitopic/courseformat/courseindex/section'], function(component) {
-    component.init('{{uniqid}}-course-index-section-{{id}}');
+    component.init('course-index-section-{{id}}');
 });
 {{/js}}
