--- a/templates/courseformat/contenttabs/tab.mustache
+++ b/templates/courseformat/contenttabs/tab.mustache
@@ -32,7 +32,7 @@
     }
 }}
 {{#testingtab}}<ul>{{/testingtab}}
-<li class="nav-item tab_level_{{level}}" data-id="{{sectionid}}">
+<li class="nav-item tab_level_{{level}}" {{#sectionid}}data-id="{{.}}"{{/sectionid}}>
     <a class="nav-link{{#active}} active{{/active}}{{#inactive}} disabled{{/inactive}}" {{#link}}href="{{{link}}}"{{/link}} title="{{title}}">{{{text}}}</a>
 </li>
 {{#testingtab}}</ul>{{/testingtab}}
