Abbreviate course index section name prefix

--- a/templates/courseformat/courseindex/section.mustache
+++ b/templates/courseformat/courseindex/section.mustache
@@ -105,7 +105,7 @@
             data-for="section_title"
             tabindex="-1"
         >
-            {{{title}}}
+            {{{shorttitle}}}
         </a>
         <span class="current-badge badge bg-primary text-white ms-2 px-2 rounded-pill">
             {{highlighted}}
