--- a/templates/courseformat/content/addsection.mustache
+++ b/templates/courseformat/content/addsection.mustache
@@ -31,19 +31,26 @@
     }
 }}
 {{#showaddsection}}
-<div id="fmtchangenumsections" class="bulk-hidden mt-5">
+<div id="fmt-course-addsection" class="changenumsections bulk-hidden mt-5">
 
     {{#addsections}}
-    <a href="{{{url}}}"
-        class="w-100 btn add-section justify-content-center align-items-center p-3 {{^canaddmore}}cantadd dimmed{{/canaddmore}}"
-        data-add-sections="{{title}}"
-        data-new-sections="{{newsection}}"
+        <a href="{{{url}}}"
+            class="{{^canaddsection}}d-none{{/canaddsection}} w-100 btn add-section justify-content-center align-items-center p-3"
+            data-add-sections="{{title}}"
+            data-new-sections="{{newsection}}"
 
-    >
-        {{#pix}} t/add, moodle {{/pix}}
-        {{title}}
-    </a>
-
+        >
+            {{#pix}} t/add, core {{/pix}}
+            {{title}}
+        </a>
+        <div class="{{#canaddsection}}d-none{{/canaddsection}} p-3 max-section-alert" data-region="max-sections-warning">
+            <div class="w-100 text-center">
+                {{#pix}}t/block, moodle{{/pix}}
+            </div>
+            <div class="w-100 fst-italic text-center">
+                {{#str}}maxsectionaddmessage, core_courseformat{{/str}}
+            </div>
+        </div>
     {{/addsections}}
 </div>
 {{/showaddsection}}
