Update Mustache templates for Moodle 5.0 partial revert 2

--- a/templates/courseformat/content.mustache
+++ b/templates/courseformat/content.mustache
@@ -139,13 +139,23 @@
             {{/ core_courseformat/local/content/section }}
         {{/sections}}
     </ul>
+    {{#singlesection}}
+    <div class="single-section">
 
+        <ul class="{{format}} section-list sections topics">
+            {{$ core_courseformat/local/content/section }}
+                {{> core_courseformat/local/content/section }}
+            {{/ core_courseformat/local/content/section }}
+        </ul>
+
+    </div>
+    {{/singlesection}}
     {{#numsections}}
-
+        {{^singlesection}}
             {{$ core_courseformat/local/content/addsection}}
                 {{> format_multitopic/courseformat/content/addsection}}
             {{/ core_courseformat/local/content/addsection}}
-
+        {{/singlesection}}
     {{/numsections}}
     {{#bulkedittools}}
         {{$ core_courseformat/local/content/bulkedittools}}
