Add new separator (MDL-80621)

--- a/templates/courseformat/content/section.mustache
+++ b/templates/courseformat/content/section.mustache
@@ -107,5 +107,12 @@
         {{/ core_courseformat/local/content/section/content }}
     </div>
 
+    {{#insertafter}}
+        {{#numsections}}
+            {{$ core_courseformat/local/content/addsection}}
+                {{> format_multitopic/courseformat/content/section/addsectiondivider }}
+            {{/ core_courseformat/local/content/addsection}}
+        {{/numsections}}
+    {{/insertafter}}
 </li>
 {{#testingsection}}</ul>{{/testingsection}}
