Unify init params for course editor (MDL-83339)

--- a/templates/courseformat/content.mustache
+++ b/templates/courseformat/content.mustache
@@ -165,6 +165,6 @@
 </div>
 {{#js}}
 require(['format_multitopic/courseformat/content'], function(component) {
-    component.init('page', {});
+    component.init('#page', {});
 });
 {{/js}}
