--- a/templates/courseformat/contenttabs/tabtreecontainer.mustache
+++ b/templates/courseformat/contenttabs/tabtreecontainer.mustache
@@ -37,6 +37,6 @@
 </div>
 {{#js}}
 require(['format_multitopic/courseformat/contenttabs/tabtreecontainer'], function(component) {
-    component.init('course-tabs-{{uniqid}}');
+    component.init('#course-tabs-{{uniqid}}');
 });
 {{/js}}
