--- a/templates/courseformat/courseindex/courseindex.mustache
+++ b/templates/courseformat/courseindex/courseindex.mustache
@@ -114,6 +114,6 @@
 </div>
 {{#js}}
 require(['format_multitopic/courseformat/courseindex/courseindex'], function(component) {
-    component.init('course-index');
+    component.init('#course-index');
 });
 {{/js}}
