--- a/templates/courseformat/courseindex/placeholders.mustache
+++ b/templates/courseformat/courseindex/placeholders.mustache
@@ -52,6 +52,6 @@
 </div>
 {{#js}}
 require(['format_multitopic/courseformat/courseindex/placeholder'], function(component) {
-    component.init('course-index-placeholder');
+    component.init('#course-index-placeholder');
 });
 {{/js}}
