--- a/templates/courseformat/courseindex/section.mustache
+++ b/templates/courseformat/courseindex/section.mustache
@@ -133,6 +133,6 @@
 {{#testingsection}}</div>{{/testingsection}}
 {{#js}}
 require(['format_multitopic/courseformat/courseindex/section'], function(component) {
-    component.init('course-index-section-{{id}}');
+    component.init('#course-index-section-{{id}}');
 });
 {{/js}}
